@@ -2,6 +2,10 @@ WARNING: Before upgrading MIMEDefang, please search this file for
 *** NOTE INCOMPATIBILITY ** to see if anything has changed that might
 affect your filter.
 
+2021-07-28 Giovanni Bechis <g.bechis@snb.it>
+
+  * add experimental support to scan emails with Rspamd antispam
+
 2021-07-20 Giovanni Bechis <g.bechis@snb.it>
 
   * remove --enable_cleanup_with_rm "configure" parameter,
